# sdk.vmodem-daemon-emulator

./: AUTHORS  COPYING  LICENSE.GPLv2  Makefile.in  NOTICE  build.sh  build_dpkg.sh  configure.ac  vmodem-x86.service  vmodemd
db/: gprs.db  gprs.db-journal  network.db  pb.db  pb.db-journal  sim.db  sim.db-journal  sim_data.db  sim_data.db-journal  sim_info.db  sim_info.db-journal  ss.db  ss.db-journal
debian/: changelog  control  copyright  rules  vmodemd-emul.install.in  vmodemd-emul.postinst.in
lib/libcommon/: Makefile.in  fileio.c  fileio.h  logmsg.c  logmsg.h  process.c  process.h  safestring.c  safestring.h
lib/libsms/: Makefile.in  sms_header.h  sms_tool.c  sms_util.c  sms_util.h
lib/libui/: Makefile.in  dialog.c  dialog.h  imageutil.c  imageutil.h  utils.c  utils.h
libvmodem/: Makefile.in  db_phonebook.h  libvgsm_call.c  libvgsm_data.c  libvgsm_debug.h  libvgsm_display.c  libvgsm_edb.c  libvgsm_emul.c  libvgsm_gprs.c  libvgsm_hdlc.c  libvgsm_init.c  libvgsm_network.c  libvgsm_power.c  libvgsm_sat.c  libvgsm_sim.c  libvgsm_sms.c  libvgsm_ss.c  linuxtapi.h  linuxtapi4gsm.h  linuxtapi4gsm_type.h  linuxtapi4type.h  lxtsms.c  lxtsms.h  lxtsmstypedef.h  lxtutil.c  lxtutil.h  phoneprotocol.h  phoneprotocol4gsm.h  samsungtapi.h  sqlite3.h  tapi4phonebook.h  types4cardboot.h  vgsm.h  vgsm_call.h  vgsm_data.h  vgsm_display.h  vgsm_edb.h  vgsm_error.h  vgsm_gprs.h  vgsm_hdlc.h  (+8 more)
packaging/: vmodemd-emul.manifest  vmodemd-emul.spec
vmodem/: DO_NO_MERGE  Makefile.in
vmodem/at/: at_func.c  at_gen_resp.c  at_msg.c  at_recv.c  at_rx_call.c  at_rx_data.c  at_rx_gprs.c  (+27 more)
(+191 files in other folders)
